--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
         "nuxt-icon": "^0.1.8",
         "pinia": "^2.0.24",
         "postcss": "^8.4.18",
-        "prettier": "^2.7.1"
-    },
-    "dependencies": {
+        "prettier": "^2.7.1",
         "nuxt-directus": "^3.2.2"
     }
 }
