--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "nuxt": "^3.0.0",
+        "nuxt-directus": "^3.2.2",
         "nuxt-icon": "^0.1.8",
         "pinia": "^2.0.24",
         "postcss": "^8.4.18",
-        "prettier": "^2.7.1",
-        "nuxt-directus": "^3.2.2"
+        "prettier": "^2.7.1"
+    },
+    "dependencies": {
+        "vue3-carousel": "^0.2.9"
     }
 }
