--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@vueuse/core": "^9.5.0",
         "@vueuse/nuxt": "^9.5.0",
         "autoprefixer": "10.4.13",
+        "esbuild": "^0.16.17",
         "eslint": "^8.27.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
