--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "prettier": "^2.7.1"
     },
     "dependencies": {
+        "@formkit/auto-animate": "^1.0.0-beta.5",
+        "@nuxt/content": "^2.3.0",
         "@nuxtclub/slugify": "^1.2.1",
         "@tinymce/tinymce-vue": "^5.0.0"
     }
