--- a/package.json
+++ b/package.json
@@ -33,7 +33,15 @@
     "dependencies": {
         "@formkit/auto-animate": "^1.0.0-beta.5",
         "@nuxt/content": "^2.3.0",
-        "@tinymce/tinymce-vue": "^5.0.0",
+        "@tiptap/extension-character-count": "^2.0.0-beta.209",
+        "@tiptap/extension-subscript": "^2.0.0-beta.209",
+        "@tiptap/extension-superscript": "^2.0.0-beta.209",
+        "@tiptap/extension-text-align": "^2.0.0-beta.209",
+        "@tiptap/extension-underline": "^2.0.0-beta.209",
+        "@tiptap/starter-kit": "^2.0.0-beta.209",
+        "@tiptap/vue-3": "^2.0.0-beta.209",
+        "less": "^4.1.3",
+        "less-loader": "^11.1.0",
         "postscribe": "^2.0.8"
     }
 }
