--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@tiptap/vue-3": "^2.0.0-beta.209",
         "less": "^4.1.3",
         "less-loader": "^11.1.0",
-        "postscribe": "^2.0.8"
+        "postscribe": "^2.0.8",
+        "vue-select": "^4.0.0-beta.6"
     }
 }
